syntax = "proto3";

package rs.ac.uns.ftn.grpc;
import "Notification/Support/Grpc/Protos/model.proto";

service HostCancelReservationNotificationGrpcService {
  rpc communicate (MessageProto3) returns (MessageResponseProto3);
}